--- a/index.html
+++ b/index.html
@@ -6,6 +6,94 @@
     <script src="js/phaser.min.js"></script>
 </head>
 <body>
+<div id="gameContainer"></div>
+<script type="text/javascript">
 
+    var game = new Phaser.Game(800, 600, Phaser.AUTO, 'gameContainer', { preload: preload, create: create, update: update });
+
+    function preload() {
+        game.load.image('sky', 'assets/img/sky.png');
+        game.load.image('ground', 'assets/img/platform.png');
+        game.load.image('star', 'assets/img/star.png');
+        game.load.spritesheet('dude', 'assets/img/dude.png', 32, 48);
+    }
+    var player;
+    var platforms;
+    function create() {
+
+
+        game.physics.startSystem(Phaser.Physics.ARCADE); // so enable the Arcade Physics system
+        game.add.sprite(0, 0, 'sky'); //  background for our game
+
+        //  The platforms group contains the ground and the 2 ledges we can jump on
+        platforms = game.add.group();
+        platforms.enableBody = true; //  We will enable physics for any object that is created in this group
+
+        var ground = platforms.create(0, game.world.height - 64, 'ground');// Here we create the ground.
+        ground.scale.setTo(2, 2); //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
+        ground.body.immovable = true; //  This stops it from falling away when you jump on it
+
+        //  Now let's create two ledges
+        var ledge = platforms.create(400, 400, 'ground');
+        ledge.body.immovable = true;
+        ledge = platforms.create(-150, 250, 'ground');
+        ledge.body.immovable = true;
+
+        // The player and its settings
+        player = game.add.sprite(32, game.world.height - 150, 'dude');
+
+        //  We need to enable physics on the player
+        game.physics.arcade.enable(player);
+
+        //  Player physics properties. Give the little guy a slight bounce.
+        player.body.bounce.y = 0.2;
+        player.body.gravity.y = 300;
+        player.body.collideWorldBounds = true;
+
+        //  Our two animations, walking left and right.
+        player.animations.add('left', [0, 1, 2, 3], 10, true);
+        player.animations.add('right', [5, 6, 7, 8], 10, true);
+
+        //  Our controls.
+        cursors = game.input.keyboard.createCursorKeys();
+    }
+
+    function update() {
+        //  Collide the player and the stars with the platforms
+        game.physics.arcade.collide(player, platforms);
+
+        //  Reset the players velocity (movement)
+        player.body.velocity.x = 0;
+
+        if (cursors.left.isDown)
+        {
+            //  Move to the left
+            player.body.velocity.x = -150;
+
+            player.animations.play('left');
+        }
+        else if (cursors.right.isDown)
+        {
+            //  Move to the right
+            player.body.velocity.x = 150;
+
+            player.animations.play('right');
+        }
+        else
+        {
+            //  Stand still
+            player.animations.stop();
+
+            player.frame = 4;
+        }
+
+        //  Allow the player to jump if they are touching the ground.
+        if (cursors.up.isDown && player.body.touching.down)
+        {
+            player.body.velocity.y = -350;
+        }
+    }
+
+</script>
 </body>
 </html>
